--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,12 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+production:
+  adapter: postgresql
+  database: ripul
+  pool: 5
+  timeout: 5000
+
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: ripul_dev
   pool: 5
   timeout: 5000
 
@@ -13,13 +14,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
-
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: ripul_test
   pool: 5
   timeout: 5000
