--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,18 @@
-production:
+common: &common
   adapter: postgresql
-  database: ripul
+  username: <%= ENV['POSTGRES_USERNAME'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
   pool: 5
   timeout: 5000
+
+production:
+  <<: *common
+  database: ripul
 
 development:
-  adapter: postgresql
+  <<: *common
   database: ripul_dev
-  pool: 5
-  timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  <<: *common
   database: ripul_test
-  pool: 5
-  timeout: 5000
