picks.yml: correctly point to Team and Player fixtures

--- a/test/fixtures/picks.yml
+++ b/test/fixtures/picks.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  team: 
-  player: 
+  team: one
+  player: one
   gender: M
   automatic: false
   number: 1
