--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -4,12 +4,12 @@ one:
   first_name: MyString
   last_name: MyString
   age: 1
-  team: one
+  team:
   gender: M
 
 two:
   first_name: MyString
   last_name: MyString
   age: 1
-  team: one
+  team:
   gender: F
