add more picks and players

--- a/test/fixtures/picks.yml
+++ b/test/fixtures/picks.yml
@@ -7,6 +7,13 @@ one:
   automatic: false
   number: 1
 
+male:
+  team: one
+  player:
+  gender: M
+  automatic: false
+  number: 2
+
 two:
   team: one
   player:
